--- a/app/sass/_media_queries_tablet.sass
+++ b/app/sass/_media_queries_tablet.sass
@@ -13,6 +13,11 @@
 			justify-content: space-between
 			position: relative
 			
+		&:before
+			right: calc(50% - 1195px)
+			width: 1000px
+	
+			
 	.h-logo
 		margin-left: 7%
 		
@@ -405,6 +410,25 @@
 			width: calc(33.3% - 20px)
 			min-width: 275px
 			
+			
+	
+	.card-advantages
+		
+		.item
+			padding-right: 15px
+			
+			.icon
+				margin-right: 3px
+
+			.text
+				font-size: 14px
+				
+				
+	.catalog-other-s
+		max-width: 300px
+		margin-left: auto
+		margin-right: auto
+			
 
 	#footer 
 		.inner-wrapper
@@ -500,4 +524,7 @@
 	.about-advantages .list__item
 		padding-right: 10px
 		font-size: 15px
+		
+	.bottom-request.--with-form .img
+		display: none
 			
