--- a/app/sass/_sprite-svg.sass
+++ b/app/sass/_sprite-svg.sass
@@ -210,10 +210,30 @@
 
 
 
+@mixin mixin-i-download4 
+	width: 10px
+	height: 16px
+	background-position: -550px -464px
+	
+.i.i-download4 
+	@include mixin-i-download4
+
+
+
+@mixin mixin-i-drops 
+	width: 41px
+	height: 48px
+	background-position: -560px -480px
+	
+.i.i-drops 
+	@include mixin-i-drops
+
+
+
 @mixin mixin-i-flower 
 	width: 104px
 	height: 112px
-	background-position: -550px -464px
+	background-position: -601px -528px
 	
 .i.i-flower 
 	@include mixin-i-flower
@@ -223,17 +243,37 @@
 @mixin mixin-i-flower2 
 	width: 40px
 	height: 42px
-	background-position: -654px -576px
+	background-position: -705px -640px
 	
 .i.i-flower2 
 	@include mixin-i-flower2
 
 
 
+@mixin mixin-i-fuel 
+	width: 40px
+	height: 48px
+	background-position: -745px -682px
+	
+.i.i-fuel 
+	@include mixin-i-fuel
+
+
+
+@mixin mixin-i-info 
+	width: 29px
+	height: 29px
+	background-position: -785px -730px
+	
+.i.i-info 
+	@include mixin-i-info
+
+
+
 @mixin mixin-i-leaf 
 	width: 101px
 	height: 42px
-	background-position: -694px -618px
+	background-position: -814px -759px
 	
 .i.i-leaf 
 	@include mixin-i-leaf
@@ -243,7 +283,7 @@
 @mixin mixin-i-leaf2 
 	width: 13px
 	height: 11px
-	background-position: -795px -660px
+	background-position: -915px -801px
 	
 .i.i-leaf2 
 	@include mixin-i-leaf2
@@ -253,17 +293,27 @@
 @mixin mixin-i-leaf3 
 	width: 30px
 	height: 25px
-	background-position: -808px -671px
+	background-position: -928px -812px
 	
 .i.i-leaf3 
 	@include mixin-i-leaf3
 
 
 
+@mixin mixin-i-leaf4 
+	width: 17px
+	height: 16px
+	background-position: -958px -837px
+	
+.i.i-leaf4 
+	@include mixin-i-leaf4
+
+
+
 @mixin mixin-i-lines 
 	width: 19px
 	height: 9px
-	background-position: -838px -696px
+	background-position: -975px -853px
 	
 .i.i-lines 
 	@include mixin-i-lines
@@ -273,7 +323,7 @@
 @mixin mixin-i-lines2 
 	width: 19px
 	height: 9px
-	background-position: -857px -705px
+	background-position: -994px -862px
 	
 .i.i-lines2 
 	@include mixin-i-lines2
@@ -283,7 +333,7 @@
 @mixin mixin-i-lock 
 	width: 18px
 	height: 24px
-	background-position: -876px -714px
+	background-position: -1013px -871px
 	
 .i.i-lock 
 	@include mixin-i-lock
@@ -293,7 +343,7 @@
 @mixin mixin-i-lock2 
 	width: 18px
 	height: 24px
-	background-position: -894px -738px
+	background-position: -1031px -895px
 	
 .i.i-lock2 
 	@include mixin-i-lock2
@@ -303,7 +353,7 @@
 @mixin mixin-i-mail 
 	width: 114px
 	height: 98px
-	background-position: -912px -762px
+	background-position: -1049px -919px
 	
 .i.i-mail 
 	@include mixin-i-mail
@@ -313,7 +363,7 @@
 @mixin mixin-i-mail2 
 	width: 17px
 	height: 11px
-	background-position: -1026px -860px
+	background-position: -1163px -1017px
 	
 .i.i-mail2 
 	@include mixin-i-mail2
@@ -323,7 +373,7 @@
 @mixin mixin-i-mail3 
 	width: 25px
 	height: 16px
-	background-position: -1043px -871px
+	background-position: -1180px -1028px
 	
 .i.i-mail3 
 	@include mixin-i-mail3
@@ -333,7 +383,7 @@
 @mixin mixin-i-mail4 
 	width: 52px
 	height: 59px
-	background-position: -1068px -887px
+	background-position: -1205px -1044px
 	
 .i.i-mail4 
 	@include mixin-i-mail4
@@ -343,7 +393,7 @@
 @mixin mixin-i-micro 
 	width: 34px
 	height: 42px
-	background-position: -1120px -946px
+	background-position: -1257px -1103px
 	
 .i.i-micro 
 	@include mixin-i-micro
@@ -353,7 +403,7 @@
 @mixin mixin-i-pdf 
 	width: 25px
 	height: 23px
-	background-position: -1154px -988px
+	background-position: -1291px -1145px
 	
 .i.i-pdf 
 	@include mixin-i-pdf
@@ -363,17 +413,27 @@
 @mixin mixin-i-pdf2 
 	width: 25px
 	height: 23px
-	background-position: -1179px -1011px
+	background-position: -1316px -1168px
 	
 .i.i-pdf2 
 	@include mixin-i-pdf2
 
 
 
+@mixin mixin-i-pdf3 
+	width: 25px
+	height: 23px
+	background-position: -1341px -1191px
+	
+.i.i-pdf3 
+	@include mixin-i-pdf3
+
+
+
 @mixin mixin-i-phone 
 	width: 17px
 	height: 18px
-	background-position: -1204px -1034px
+	background-position: -1366px -1214px
 	
 .i.i-phone 
 	@include mixin-i-phone
@@ -383,7 +443,7 @@
 @mixin mixin-i-phone2 
 	width: 120px
 	height: 120px
-	background-position: -1221px -1052px
+	background-position: -1383px -1232px
 	
 .i.i-phone2 
 	@include mixin-i-phone2
@@ -393,7 +453,7 @@
 @mixin mixin-i-phone3 
 	width: 16px
 	height: 16px
-	background-position: -1341px -1172px
+	background-position: -1503px -1352px
 	
 .i.i-phone3 
 	@include mixin-i-phone3
@@ -403,7 +463,7 @@
 @mixin mixin-i-pointer 
 	width: 14px
 	height: 14px
-	background-position: -1357px -1188px
+	background-position: -1519px -1368px
 	
 .i.i-pointer 
 	@include mixin-i-pointer
@@ -413,7 +473,7 @@
 @mixin mixin-i-pointer2 
 	width: 17px
 	height: 17px
-	background-position: -1371px -1202px
+	background-position: -1533px -1382px
 	
 .i.i-pointer2 
 	@include mixin-i-pointer2
@@ -423,7 +483,7 @@
 @mixin mixin-i-pointer3 
 	width: 14px
 	height: 14px
-	background-position: -1388px -1219px
+	background-position: -1550px -1399px
 	
 .i.i-pointer3 
 	@include mixin-i-pointer3
@@ -433,7 +493,7 @@
 @mixin mixin-i-quotes 
 	width: 88px
 	height: 60px
-	background-position: -1402px -1233px
+	background-position: -1564px -1413px
 	
 .i.i-quotes 
 	@include mixin-i-quotes
@@ -443,17 +503,27 @@
 @mixin mixin-i-shield 
 	width: 39px
 	height: 39px
-	background-position: -1490px -1293px
+	background-position: -1652px -1473px
 	
 .i.i-shield 
 	@include mixin-i-shield
 
 
 
+@mixin mixin-i-shield2 
+	width: 38px
+	height: 47px
+	background-position: -1691px -1512px
+	
+.i.i-shield2 
+	@include mixin-i-shield2
+
+
+
 @mixin mixin-i-spica 
 	width: 40px
 	height: 56px
-	background-position: -1529px -1332px
+	background-position: -1729px -1559px
 	
 .i.i-spica 
 	@include mixin-i-spica
@@ -463,7 +533,7 @@
 @mixin mixin-i-sunflower 
 	width: 41px
 	height: 57px
-	background-position: -1569px -1388px
+	background-position: -1769px -1615px
 	
 .i.i-sunflower 
 	@include mixin-i-sunflower
@@ -473,7 +543,7 @@
 @mixin mixin-i-temp 
 	width: 68px
 	height: 96px
-	background-position: -1610px -1445px
+	background-position: -1810px -1672px
 	
 .i.i-temp 
 	@include mixin-i-temp
@@ -483,7 +553,7 @@
 @mixin mixin-i-test_tubes 
 	width: 40px
 	height: 39px
-	background-position: -1678px -1541px
+	background-position: -1878px -1768px
 	
 .i.i-test_tubes 
 	@include mixin-i-test_tubes
@@ -493,7 +563,7 @@
 @mixin mixin-i-trash 
 	width: 40px
 	height: 56px
-	background-position: -1718px -1580px
+	background-position: -1918px -1807px
 	
 .i.i-trash 
 	@include mixin-i-trash
