--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -25,6 +25,7 @@ $line-height: 1.5
 $width-wrapper: 1264px
 $wrapper-padding: 30px
 $wrapper-padding-mobile: 15px
+$bg: #fafafa
 $border-grey: #cdc5c9
 
 $error: #E32855
