--- a/app/sass/_defaults.sass
+++ b/app/sass/_defaults.sass
@@ -19,7 +19,7 @@ body
 	font-size: $font-size
 	line-height: $line-height
 	color: $c-default
-	background: #fafafa
+	background: $bg
 	-webkit-font-smoothing: antialiased
 	-webkit-text-size-adjust: 100% 
 
