--- a/app/sass/_media_queries_mobile.sass
+++ b/app/sass/_media_queries_mobile.sass
@@ -747,28 +747,18 @@
 	.catalog__category
 		margin-top: 57px
 		
-		&-wrap
-			margin-left: -($wrapper-padding-mobile)
-			margin-right: -($wrapper-padding-mobile)
-			
-			.catalog__list
-				.item
-					max-width: unset
-					margin-left: 0
-					margin-right: 0
-					
-					&__wrap
-						margin-left: $wrapper-padding-mobile
-						margin-right: $wrapper-padding-mobile
-		
 		.top-title
 			font-size: 22px
 			text-align: center
 			
 			
+			
 	.catalog__list
+		max-width: 360px
+		margin-left: auto
+		margin-right: auto
+		
 		.item
-			max-width: 360px
 			margin-left: 15px
 			margin-right: 15px
 				
@@ -1104,7 +1094,7 @@
 		width: 280px
 		
 	.f-contacts
-		margin: 5px auto 0
+		margin: 8px auto 0
 		
 		&__top
 			text-align: center
@@ -1409,11 +1399,6 @@
 						transform: unset
 						
 	
-	.catalog__category
-		
-		&-wrap
-			margin-right: -200px
-			
 	#footer
 		
 		.f-left
@@ -1424,6 +1409,8 @@
 				max-width: 320px
 			
 	.f-contacts
+		margin-top: 10px
+		
 		&__top
 			font-size: 15px
 			
@@ -1745,12 +1732,6 @@
 					transform: rotate(-90deg)
 					
 					
-	
-	.catalog__category
-		
-		&-wrap
-			margin-right: -280px
-		
 	
 	.f-nav
 		&__wrap
