--- a/app/sass/_media_queries_mobile.sass
+++ b/app/sass/_media_queries_mobile.sass
@@ -543,11 +543,9 @@
 			height: 87vw
 			max-height: 450px
 			
-			img
+			#map
 				width: 100%
-				height: 100%
-				object-fit: cover
-				
+				height: 100%				
 				
 				
 	
