--- a/app/sass/_media_queries_tablet_desktop.sass
+++ b/app/sass/_media_queries_tablet_desktop.sass
@@ -619,10 +619,9 @@
 			flex: 1 1 0
 			margin-right: -($wrapper-padding)
 			
-			img
+			#map
 				width: 100%
 				height: 100%
-				object-fit: cover
 				
 				
 				
