--- a/app/sass/_plugin.slick.scss
+++ b/app/sass/_plugin.slick.scss
@@ -15,7 +15,7 @@
     -webkit-tap-highlight-color: transparent;
 }
 
-.slick-slider *, #bday-slider * {
+.slick-slider *, #bday-slider *,  {
     outline: none;
 }
 
