--- a/app/sass/_media_queries_tablet_desktop.sass
+++ b/app/sass/_media_queries_tablet_desktop.sass
@@ -7,7 +7,6 @@
 		background-position: 50% 0
 		background-size: cover
 		
-		
 	#header
 		padding: 13px 0 15px
 		
@@ -1057,3 +1056,14 @@
 		
 		
 /* end media queries tablet and desktop */
+
+
+@media not all and (min-resolution:.001dpcm)
+	@supports (-webkit-appearance:none)
+
+	    .sect-top
+	    	background-position: calc(50% - 75px) 0
+	    	
+@media (min-width: 1800px)
+	.sect-top
+		background-position: 88% bottom
