--- a/app/sass/_media_queries_tablet_desktop.sass
+++ b/app/sass/_media_queries_tablet_desktop.sass
@@ -196,6 +196,16 @@
 			
 			
 		&__slider
+		
+			.slider-main:not(.slick-initialized)
+				opacity: 0
+				
+			.slider-main.slick-initialized
+				opacity: 1
+					
+				
+		
+				
 			
 			.item
 				.item__wrap
